--- a/ottergram/stylesheets/styles.css
+++ b/ottergram/stylesheets/styles.css
@@ -1,15 +1,54 @@
+@font-face {
+    font-family: 'airstreamregular';
+    src: url('fonts/Airstream-webfont.eot');
+    src: url('fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
+   url('fonts/Airstream-webfont.woff') format('woff'),
+   url('fonts/Airstream-webfont.ttf') format('truetype'),
+   url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+   }
+@font-face {
+    font-family: 'lakeshore';
+    src: url('fonts/LAKESHOR-webfont.eot');
+    src: url('fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'),
+    url('fonts/LAKESHOR-webfont.woff') format('woff'),
+    url('fonts/LAKESHOR-webfont.ttf') format('truetype'),
+    url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
+    font-weight: normal;
+    font-style: normal;
+   }
+   
+
+html,body{
+    height: 100%;
+}
+
 body{
+    display: flex;
+    flex-direction: column;
+
     font-size: 10px;
     background: rgb(149, 194, 215);
 }
+
 
 a{
     text-decoration: none;
 }
 
-.thumbnail-item + .thumbnail-item {
-    margin-top: 10px;
+
+.main-header{
+    flex: 0 1 auto;
 }
+
+.main-content {
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+   }
+   
+
 
 .thumbnail-title{
     display: block;
@@ -29,14 +68,24 @@ a{
 
 
 .thumbnail-item{
-    display: block;
+    display: inline-block;
+    min-width: 120px;
+    max-width: 120px;
     border: 1px solid rgb(100%, 100%, 100%);
     border: 1px solid rgba(100%, 100%, 100%, 0.8);
 }
 
 .thumbnail-list{
+    
+    flex: 0 1 auto;
+    order: 2;
+    display: flex;
+    justify-content: space-between;
     list-style: none;
     padding: 0;
+
+    white-space: nowrap;
+    overflow-x: auto;
 }
 
 .logo-text {
@@ -44,6 +93,29 @@ a{
 
     text-align: center;
     text-transform: uppercase;
+    font-family: lakeshore;
+
     font-size: 37px;
 }
 
+.detail-image-container {
+    flex: 1 1 auto;
+   }
+
+   .detail-image-frame {
+    position: relative;
+    text-align: center;
+   }
+   
+
+.detail-image{
+    width: 90%;
+}
+
+.detail-image-title {
+    font-family: airstreamregular;
+
+    color: white;
+    text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
+    font-size: 40px;
+   }
