--- a/ottergram/stylesheets/styles.css
+++ b/ottergram/stylesheets/styles.css
@@ -2,29 +2,31 @@
     font-family: 'airstreamregular';
     src: url('fonts/Airstream-webfont.eot');
     src: url('fonts/Airstream-webfont.eot?#iefix') format('embedded-opentype'),
-   url('fonts/Airstream-webfont.woff') format('woff'),
-   url('fonts/Airstream-webfont.ttf') format('truetype'),
-   url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+        url('fonts/Airstream-webfont.woff') format('woff'),
+        url('fonts/Airstream-webfont.ttf') format('truetype'),
+        url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
     font-weight: normal;
     font-style: normal;
-   }
+}
+
 @font-face {
     font-family: 'lakeshore';
     src: url('fonts/LAKESHOR-webfont.eot');
     src: url('fonts/LAKESHOR-webfont.eot?#iefix') format('embedded-opentype'),
-    url('fonts/LAKESHOR-webfont.woff') format('woff'),
-    url('fonts/LAKESHOR-webfont.ttf') format('truetype'),
-    url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
+        url('fonts/LAKESHOR-webfont.woff') format('woff'),
+        url('fonts/LAKESHOR-webfont.ttf') format('truetype'),
+        url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
     font-weight: normal;
     font-style: normal;
-   }
-   
+}
 
-html,body{
+
+html,
+body {
     height: 100%;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
 
@@ -33,12 +35,12 @@ body{
 }
 
 
-a{
+a {
     text-decoration: none;
 }
 
 
-.main-header{
+.main-header {
     flex: 0 1 auto;
 }
 
@@ -46,17 +48,17 @@ a{
     flex: 1 1 auto;
     display: flex;
     flex-direction: column;
-   }
-   
+}
 
 
-.thumbnail-title{
+
+.thumbnail-title {
     display: block;
     margin: 0;
     padding: 4px 10px;
 
-    background: rgb(96,125,139);
-    color: rgb(202,238,255);
+    background: rgb(96, 125, 139);
+    color: rgb(202, 238, 255);
 
     font-size: 18px;
 }
@@ -67,7 +69,7 @@ a{
 }
 
 
-.thumbnail-item{
+.thumbnail-item {
     display: inline-block;
     min-width: 120px;
     max-width: 120px;
@@ -75,8 +77,8 @@ a{
     border: 1px solid rgba(100%, 100%, 100%, 0.8);
 }
 
-.thumbnail-list{
-    
+.thumbnail-list {
+
     flex: 0 1 auto;
     order: 2;
     display: flex;
@@ -100,15 +102,15 @@ a{
 
 .detail-image-container {
     flex: 1 1 auto;
-   }
+}
 
-   .detail-image-frame {
+.detail-image-frame {
     position: relative;
     text-align: center;
-   }
-   
+}
 
-.detail-image{
+
+.detail-image {
     width: 90%;
 }
 
@@ -122,4 +124,4 @@ a{
     color: white;
     text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
     font-size: 40px;
-   }
+}
