--- a/ottergram/stylesheets/styles.css
+++ b/ottergram/stylesheets/styles.css
@@ -75,7 +75,15 @@ a {
     max-width: 120px;
     border: 1px solid rgb(100%, 100%, 100%);
     border: 1px solid rgba(100%, 100%, 100%, 0.8);
+
+    transition: transform 133ms ease-in-out;
+
 }
+
+.thumbnail-item:hover {
+    transform: scale(1.2);
+   }
+   
 
 .thumbnail-list {
 
@@ -84,7 +92,7 @@ a {
     display: flex;
     justify-content: space-between;
     list-style: none;
-    padding: 0;
+    padding: 20px 0;
 
     white-space: nowrap;
     overflow-x: auto;
@@ -107,8 +115,15 @@ a {
 .detail-image-frame {
     position: relative;
     text-align: center;
+
+    transition: transform 333ms cubic-bezier(1,.06,.28,1);
+
 }
 
+.is-tiny {
+    transform: scale(0.001);
+    transition: transform 0ms;
+   }
 
 .detail-image {
     width: 90%;
@@ -148,7 +163,7 @@ a {
         flex-direction: column;
         order: 0;
         margin-left: 20px;
-
+        padding: 0 35px;
     }
     .thumbnail-item {
         max-width: 260px;
