--- a/ottergram/stylesheets/styles.css
+++ b/ottergram/stylesheets/styles.css
@@ -82,8 +82,8 @@ a {
 
 .thumbnail-item:hover {
     transform: scale(1.2);
-   }
-   
+}
+
 
 .thumbnail-list {
 
@@ -116,14 +116,14 @@ a {
     position: relative;
     text-align: center;
 
-    transition: transform 333ms cubic-bezier(1,.06,.28,1);
+    transition: transform 333ms cubic-bezier(1, .06, .28, 1);
 
 }
 
 .is-tiny {
     transform: scale(0.001);
     transition: transform 0ms;
-   }
+}
 
 .detail-image {
     width: 90%;
@@ -143,21 +143,22 @@ a {
     font-size: 40px;
 }
 
-.hidden-detail .detail-image-container{
+.hidden-detail .detail-image-container {
     display: none;
 }
 
 .hidden-detail .thumbnail-list {
     flex-direction: column;
     align-items: center;
-   }
+}
+
 .hidden-detail .thumbnail-item {
     max-width: 80%;
-   }
+}
 
 
 
-.button-next{
+.button-next {
     position: relative;
     bottom: -15px;
     right: -89%;
@@ -166,32 +167,36 @@ a {
     height: 5px;
 }
 
-.button-prev{
+.button-prev {
     position: relative;
     bottom: -13px;
-    left:1px;
+    left: 1px;
     font-size: 25px;
-    color:white;
+    color: white;
     height: 5px;
 }
 
 @media all and (min-width: 768px) {
+
     /* Styles will go here */
-    .main-content{
+    .main-content {
         flex-direction: row;
         overflow: hidden;
     }
-    .thumbnail-list{
+
+    .thumbnail-list {
         flex-direction: column;
         order: 0;
         margin-left: 20px;
         padding: 0 35px;
     }
+
     .thumbnail-item {
         max-width: 260px;
-        }
-    .thumbnail-item + .thumbnail-item {
-            margin-top: 20px;
-        }
-    
-   }
+    }
+
+    .thumbnail-item+.thumbnail-item {
+        margin-top: 20px;
+    }
+
+}
